@@ -1,3 +1,9 @@
+2020-05-07  Tim Rühsen  <tim.ruehsen@gmx.de>
+
+	* libpoke/ios-dev-file.c (ios_dev_file_open): Replace
+	xmalloc and xstrdup by malloc and strdup.
+	Remove include xalloc.h.
+
 2020-05-12  Egeyar Bagcioglu  <egeyar@gmail.com>
 
 	* libpoke/ios.c (ios_close): Update the current IOS
